--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular2-token": "^0.2.0-beta.12",
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
+    "bootstrap": "^3.3.7",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
